--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
 	<meta property="og:image" content="path/to/image.jpg">
-	<link rel="shortcut icon" href="img/favicon/favicon.ico" type="image/x-icon">
+	<link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
 	<link rel="apple-touch-icon" href="img/favicon/apple-touch-icon.png">
 	<link rel="apple-touch-icon" sizes="72x72" href="img/favicon/apple-touch-icon-72x72.png">
 	<link rel="apple-touch-icon" sizes="114x114" href="img/favicon/apple-touch-icon-114x114.png">
@@ -29,23 +29,295 @@
 </head>
 
 <body>
-
-	<div class="container">
-
-		<div class="row">
-
-			<div class="col-sm-8 col-sm-offset-2">
-				
-				<img class="img-responsive" src="img/preview.jpg" alt="Start HTML5 Template">
-				<p>Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Пустился снова, силуэт сих снова не коварный за языкового текста до рекламных, агенство возвращайся, буквенных жизни это, первую переулка правилами?</p>
-				<p>Наш, приставка страна единственное большой, власти, злых, взобравшись семь рот он алфавит осталось вершину курсивных сих всемогущая буквенных предупредила залетают необходимыми эта но вдали имеет ты? Предупреждал повстречался, но которое!</p>
-				<p>Злых, знаках свою. Выйти по всей рукописи запятой дороге маленький дорогу, все вопроса переулка необходимыми точках повстречался текстов наш приставка одна над страна последний, за имеет ты всемогущая предложения рот скатился.</p>
-
+	<div class="main-content-popapp" style="background-image: url(img/background.png)" dir="rtl">
+		<div class="main-holder">
+			<div class="wrap-header-text">
+				<h1>מישראל באהבה</h1>
+				<h3>מתנות לשנה האזרחית החדשה</h3>
+				<p>לקראת החגים והשנה האזרחית החדשה, UPS מזמינה אתכם לשלוח מתנות לעמיתים בחו"ל. </p>
+				<p>בקטלוג שלפניכם תמצאו מגוון מתנות על טהרת התוצרת הישראלית. </p>
+				<p>פשוט בחרו מתנה ישראלית שתשמח את עמיתיכם, וכל היתר- עלינו*!</p>
+				<div class="wrap-button">
+				<a href="#" id="hide-popupp">לבחירת מתנה >></a>
+				</div>
 			</div>
-			
+			<div class="wrap-items">
+				<ul class="items" id="items">
+					<li class="item">
+						<a href="#" data-item-id="11">
+							<span class="wrap-img">
+								<img src="img/copy-5.png" alt="">
+							</span>
+							<span class="wrap-text">
+								<span>11מתנה מס’ 1</span>
+								<span class="red-style">ארבעת המופלאים</span>
+							</span>
+						</a>
+					</li>
+					<li class="item">
+						<a href="#" data-item-id="22">
+							<span class="wrap-img">
+								<img src="img/copy-4.png" alt="">
+							</span>
+							<span class="wrap-text">
+								<span>22מתנה מס’ 1</span>
+								<span class="red-style">ארבעת המופלאים</span>
+							</span>
+						</a>
+					</li>
+					<li class="item">
+						<a href="#" data-item-id="33">
+							<span class="wrap-img">
+								<img src="img/copy-5.png" alt="">
+							</span>
+							<span class="wrap-text">
+								<span>33מתנה מס’ 1</span>
+								<span class="red-style">ארבעת המופלאים</span>
+							</span>
+						</a>
+					</li>
+					<li class="item">
+						<a href="#" data-item-id="44">
+							<span class="wrap-img">
+								<img src="img/copy-4.png" alt="">
+							</span>
+							<span class="wrap-text">
+								<span>מתנה מס’ 441</span>
+								<span class="red-style">ארבעת המופלאים</span>
+							</span>
+						</a>
+					</li>
+					<li class="item">
+						<a href="#" data-item-id="55">
+							<span class="wrap-img">
+								<img src="img/copy-5.png" alt="">
+							</span>
+							<span class="wrap-text">
+								<span>55מתנה מס’ 1</span>
+								<span class="red-style">ארבעת המופלאים</span>
+							</span>
+						</a>
+					</li>
+					<li class="item">
+						<a href="#" data-item-id="66">
+							<span class="wrap-img">
+								<img src="img/copy-4.png" alt="">
+							</span>
+							<span class="wrap-text">
+								<span>מתנה מס’ 661</span>
+								<span class="red-style">ארבעת המופלאים</span>
+							</span>
+						</a>
+					</li>
+					<li class="item">
+						<a href="#">
+							<span class="wrap-img">
+								<img src="img/copy-5.png" alt="">
+							</span>
+							<span class="wrap-text">
+								<span>מתנה מס’ 1</span>
+								<span class="red-style">ארבעת המופלאים</span>
+							</span>
+						</a>
+					</li>
+					<li class="item">
+						<a href="#">
+							<span class="wrap-img">
+								<img src="img/copy-4.png" alt="">
+							</span>
+							<span class="wrap-text">
+								<span>מתנה מס’ 1</span>
+								<span class="red-style">ארבעת המופלאים</span>
+							</span>
+						</a>
+					</li>
+				</ul>
+			</div>
 		</div>
-
 	</div>
+	<div class="main-content" style="background-image: url(img/background.png)" dir="rtl">
+		<div class="main-holder">
+			<div class="nav-bar">
+				<div class="wrap-img">
+					<img src="img/logo.png" alt="">
+				</div>
+				<ul class="items slick-nav-menu">
+					<li class="item">
+						<span class="active" data-slide="37">נרות אווירה</span>
+					</li>
+					<li class="item">
+						<span data-slide="38">מקס ברנר</span>
+					</li>
+					<li class="item">
+						<span>ROY שוקולד</span>
+					</li>
+					<li class="item">
+						<span>חליטות אורגניות</span>
+					</li>
+					<li class="item">
+						<span>אהבה</span>
+					</li>
+					<li class="item">
+						<span>יקב טוליפ</span>
+					</li>
+					<li class="item">
+						<span>שמן זית</span>
+					</li>
+					<li class="item">
+						<span>כרטיסי ברכה</span>
+					</li>
+					<li class="item">
+						<span>עטי ירושלים</span>
+					</li>
+					<li class="item">
+						<span>צילומי אוויר</span>
+					</li>
+				</ul>
+			</div>
+			<div class="slider-sections">
+				<!--<ul class="slides variable-width">-->
+				<ul class="slides slick-slider">
+					<li class="slide wer-1" data-category="37" data-item-id="11">
+						<div class="wrap-content">
+							<div class="wrap-text">
+								<h4>מתנה מס’ 11</h4>
+								<h3>ארבעת המופלאים</h3>
+								<p>FAVORITE HAZELNUT - קוביות שוקולד חלב ממולאות בנוגט ובשברי לוז | 40 גרם</p>
+                                <p>VORITE ESPRESSO - קוביות שוקולד חלב ממולאות בנוגט בטעם אספרסו | 40 גרם</p>
+                                <p>NUTS – פקאן סיני עטוף בנוגט ובאבקת קקאו | 40 גרם</p>
+                                <p>CASHEW CHOCKIES – שוקולוד לבן מעולה ממולא בנוגט ומגולגל בשברי קשיו קלויים | 80 גרם</p>
+                                <p>FAVORITE HAZELNUT - קוביות שוקולד חלב ממולאות בנוגט ובשברי לוז | 40 גרם</p>
+                                <p>VORITE ESPRESSO - קוביות שוקולד חלב ממולאות בנוגט בטעם אספרסו | 40 גרם</p>
+                                <p>NUTS – פקאן סיני עטוף בנוגט ובאבקת קקאו | 40 גרם</p>
+                                <p>CASHEW CHOCKIES – שוקולוד לבן מעולה ממולא בנוגט ומגולגל בשברי קשיו קלויים | 80 גרם</p>
+								<div class="footer-text">
+									<p>משקל לחיוב: 1 ק”ג</p>
+									<p>מחיר המתנה: ₪89 (לא כולל מע"מ)</p>
+								</div>
+							</div>
+							<div class="wrap-img">
+								<img src="img/copy-4.png" alt="">
+							</div>
+						</div>
+					</li>
+					<li class="slide wre-2" data-category="37" data-item-id="22">
+						<div class="wrap-content">
+							<div class="wrap-text">
+								<h4>22מתנה מס’ </h4>
+								<h3>ארבעת המופלאים</h3>
+								<p>FAVORITE HAZELNUT - קוביות שוקולד חלב ממולאות בנוגט ובשברי לוז | 40 גרם</p>
+								<p>VORITE ESPRESSO - קוביות שוקולד חלב ממולאות בנוגט בטעם אספרסו | 40 גרם</p>
+								<p>NUTS – פקאן סיני עטוף בנוגט ובאבקת קקאו | 40 גרם</p>
+								<p>CASHEW CHOCKIES – שוקולוד לבן מעולה ממולא בנוגט ומגולגל בשברי קשיו קלויים | 80 גרם</p>
+								<div class="footer-text">
+									<p>משקל לחיוב: 1 ק”ג</p>
+									<p>מחיר המתנה: ₪89 (לא כולל מע"מ)</p>
+								</div>
+							</div>
+							<div class="wrap-img">
+								<img src="img/copy-4.png" alt="">
+							</div>
+						</div>
+					</li>
+					<li class="slide wre-3" data-category="38" data-item-id="33">
+						<div class="wrap-content">
+							<div class="wrap-text">
+								<h4>33מתנה מס’ </h4>
+								<h3>ארבעת המופלאים</h3>
+								<p>FAVORITE HAZELNUT - קוביות שוקולד חלב ממולאות בנוגט ובשברי לוז | 40 גרם</p>
+								<p>VORITE ESPRESSO - קוביות שוקולד חלב ממולאות בנוגט בטעם אספרסו | 40 גרם</p>
+								<p>NUTS – פקאן סיני עטוף בנוגט ובאבקת קקאו | 40 גרם</p>
+								<p>CASHEW CHOCKIES – שוקולוד לבן מעולה ממולא בנוגט ומגולגל בשברי קשיו קלויים | 80 גרם</p>
+								<div class="footer-text">
+									<p>משקל לחיוב: 1 ק”ג</p>
+									<p>מחיר המתנה: ₪89 (לא כולל מע"מ)</p>
+								</div>
+							</div>
+							<div class="wrap-img">
+								<img src="img/copy-4.png" alt="">
+							</div>
+						</div>
+					</li>
+					<li class="slide wre-3" data-category="38" data-item-id="44">
+						<div class="wrap-content">
+							<div class="wrap-text">
+								<h4>44מתנה מס’ </h4>
+								<h3>ארבעת המופלאים</h3>
+								<p>FAVORITE HAZELNUT - קוביות שוקולד חלב ממולאות בנוגט ובשברי לוז | 40 גרם</p>
+								<p>VORITE ESPRESSO - קוביות שוקולד חלב ממולאות בנוגט בטעם אספרסו | 40 גרם</p>
+								<p>NUTS – פקאן סיני עטוף בנוגט ובאבקת קקאו | 40 גרם</p>
+								<p>CASHEW CHOCKIES – שוקולוד לבן מעולה ממולא בנוגט ומגולגל בשברי קשיו קלויים | 80 גרם</p>
+								<div class="footer-text">
+									<p>משקל לחיוב: 1 ק”ג</p>
+									<p>מחיר המתנה: ₪89 (לא כולל מע"מ)</p>
+								</div>
+							</div>
+							<div class="wrap-img">
+								<img src="img/copy-4.png" alt="">
+							</div>
+						</div>
+					</li>
+					<li class="slide wre-3" data-category="38" data-item-id="55">
+						<div class="wrap-content">
+							<div class="wrap-text">
+								<h4>55מתנה מס’ </h4>
+								<h3>ארבעת המופלאים</h3>
+								<p>FAVORITE HAZELNUT - קוביות שוקולד חלב ממולאות בנוגט ובשברי לוז | 40 גרם</p>
+								<p>VORITE ESPRESSO - קוביות שוקולד חלב ממולאות בנוגט בטעם אספרסו | 40 גרם</p>
+								<p>NUTS – פקאן סיני עטוף בנוגט ובאבקת קקאו | 40 גרם</p>
+								<p>CASHEW CHOCKIES – שוקולוד לבן מעולה ממולא בנוגט ומגולגל בשברי קשיו קלויים | 80 גרם</p>
+								<div class="footer-text">
+									<p>משקל לחיוב: 1 ק”ג</p>
+									<p>מחיר המתנה: ₪89 (לא כולל מע"מ)</p>
+								</div>
+							</div>
+							<div class="wrap-img">
+								<img src="img/copy-4.png" alt="">
+							</div>
+						</div>
+					</li>
+					<li class="slide wre-3" data-category="38" data-item-id="66">
+						<div class="wrap-content">
+							<div class="wrap-text">
+								<h4>66מתנה מס’ </h4>
+								<h3>ארבעת המופלאים</h3>
+								<p>FAVORITE HAZELNUT - קוביות שוקולד חלב ממולאות בנוגט ובשברי לוז | 40 גרם</p>
+								<p>VORITE ESPRESSO - קוביות שוקולד חלב ממולאות בנוגט בטעם אספרסו | 40 גרם</p>
+								<p>NUTS – פקאן סיני עטוף בנוגט ובאבקת קקאו | 40 גרם</p>
+								<p>CASHEW CHOCKIES – שוקולוד לבן מעולה ממולא בנוגט ומגולגל בשברי קשיו קלויים | 80 גרם</p>
+								<div class="footer-text">
+									<p>משקל לחיוב: 1 ק”ג</p>
+									<p>מחיר המתנה: ₪89 (לא כולל מע"מ)</p>
+								</div>
+							</div>
+							<div class="wrap-img">
+								<img src="img/copy-4.png" alt="">
+							</div>
+						</div>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</div>
+	<footer>
+		<div class="main-holder">
+			<div class="wrap-section">
+				<div class="right-side">
+					<div class="wrap-text">
+						<p><a href="#">קטלוג להדפסה</a> | <a href="#">תנאי שימוש</a></p>
+					</div>
+					<div class="wrap-button">
+						<a href="#">טופס הזמנה</a>
+					</div>
+				</div>
+				<div class="left-side">
+					<div class="wrap-text">
+						<p><a href="#">business@ups.co.il</a> | <a href="#">www.ship.co.il</a></p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</footer>
 
 	<script src="js/scripts.min.js"></script>
 
