--- a/app/index.html
+++ b/app/index.html
@@ -29,6 +29,7 @@
 </head>
 
 <body>
+	<span class="label-gofman hidden-xs"><a href="http://www.gofmans.co.il/" target="_blank" >gofman creative</a></span>
 	<div class="main-content-popapp" style="background-image: url(img/background.png)" dir="rtl">
 		<div class="main-holder">
 			<div class="wrap-header-text">
@@ -50,7 +51,7 @@
 							</span>
 							<span class="wrap-text">
 								<span>11מתנה מס’ 1</span>
-								<span class="red-style">ארבעת המופלאים</span>
+								<span class="red-style">ארבעת המופלאים ארבעת המופלאים</span>
 							</span>
 						</a>
 					</li>
@@ -313,6 +314,7 @@
 				<div class="left-side">
 					<div class="wrap-text">
 						<p><a href="#">business@ups.co.il</a> | <a href="#">www.ship.co.il</a></p>
+						<p class="label-gofman-mobile hidden-lg hidden-md hidden-sm"><span><a class="label-gofman-mobile-link" href="http://www.gofmans.co.il/" target="_blank" >gofman creative</a></span></p>
 					</div>
 				</div>
 			</div>
